Implement in-match-picture-selection selecting picture logic

--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
@@ -3,7 +3,12 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 16px;
 }
+
 .grid-item {
-    width: 100%;
-    box-sizing: border-box;
-  }
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.selected {
+  border: 2px solid blue;
+}
