--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.css
@@ -8,3 +8,11 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.round-details {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    float: right;
+    padding: 10px;
+}
