--- a/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.css
+++ b/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.css
@@ -3,13 +3,13 @@ form {
   max-width: 250px;
   width: 100%;
   margin: auto;
-  
 }
 
-mat-card{
+mat-card {
   margin: auto;
   width: fit-content;
   margin-top: 10%;
+  padding: 10px;
 }
 
 .registration-title {
