Handle timers for each round state + move picture selection logic to picture selection component

--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -14,6 +14,6 @@
   <app-in-match-picture-selection
     *ngSwitchCase="RoundStates.pictureSelection"
     [pictures]="this.usersPictures"
-    (onSelectedPicture)="onPictureSelected($event)"
+    [currentRound]="this.currentRound"
   ></app-in-match-picture-selection>
 </div>
