View picture votes + cant vote to your own pic

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -1,10 +1,13 @@
 <h3>Select a picture</h3>
 <div class="pictures-grid">
-  <app-picture-item
-    *ngFor="let picture of pictures"
-    [picture]="picture"
-    class="grid-item"
-    (click)="onPictureSelected(picture)"
-    [class.selected]="picture.id === selectedPictureId"
-  ></app-picture-item>
+  <div *ngFor="let picture of picturesToVote">
+    <app-picture-item
+      [picture]="picture"
+      class="grid-item"
+      (click)="onPictureVoted(picture)"
+      [class.voted]="picture.id === votedPictureId"
+      [class.disabled]="picture.id === userId"
+    ></app-picture-item>
+    <strong>{{ picture.numOfVotes }}</strong>
+  </div>
 </div>
