Add in-match-vote-picture to in-match component

--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -16,4 +16,10 @@
     [pictures]="this.usersPictures"
     [currentRound]="this.currentRound"
   ></app-in-match-picture-selection>
+
+  <app-in-match-vote-picture
+    *ngSwitchCase="RoundStates.voting"
+    [picturesToVote]="this.currentRound?.picturesSelected"
+    [currentRound]="this.currentRound"
+  ></app-in-match-vote-picture>
 </div>
