GetCurrentRound sends matchId

--- a/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
@@ -11,6 +11,7 @@
   ></app-pre-match-lobby>
   <app-in-match
     *ngSwitchCase="MatchStates.inProgress"
+    [matchId]="matchId!"
     (onDisconnect)="disconnect()"
   ></app-in-match>
 </div>
