Add lock in button for picture selection

--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 16px;
+  overflow-y: scroll;
 }
 
 .grid-item {
@@ -11,4 +12,9 @@
 
 .selected {
   border: 2px solid blue;
+}
+
+.lock-in-button {
+  margin-top: 10px;
+  left: 50%;
 }
