Add lockin to vote screen

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -12,3 +12,12 @@
     <strong>{{ picture.numOfVotes }}</strong>
   </div>
 </div>
+<button
+class="lock-in-button"
+  mat-raised-button
+  color="primary"
+  [disabled]="!votedPictureId && !lockedIn"
+  (click)="onLockIn()"
+>
+  Lock-in Selection
+</button>
