fix lockin buttons logic

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -16,7 +16,7 @@
 class="lock-in-button"
   mat-raised-button
   color="primary"
-  [disabled]="!votedPictureId && !lockedIn"
+  [disabled]="!votedPictureId || lockedIn"
   (click)="onLockIn()"
 >
   Lock-in Selection
