--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
@@ -11,7 +11,7 @@
 class="lock-in-button"
   mat-raised-button
   color="primary"
-  [disabled]="!selectedPictureId && !lockedIn"
+  [disabled]="!selectedPictureId || lockedIn"
   (click)="onLockIn()"
 >
   Lock-in Selection
