--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
@@ -5,7 +5,7 @@
     <p>owner name: {{ match?.owner?.username }}</p>
   </div>
 
-<div class="inner-container">
+  <div class="inner-container">
     <!-- Users List -->
     <div id="users-container" class="users-container">
       <h2>Users:</h2>
@@ -16,12 +16,12 @@
         class="disconnect-button"
         color="warn"
         mat-raised-button
-        (click)="disconnect()"
+        (click)="onLeaveMatchClicked()"
       >
         Disconnect
       </button>
     </div>
-  
+
     <!-- Match Settings Form -->
     <div *ngIf="isOwner" id="matchSettingsForm" class="match-settings-form">
       <h2>Match Settings:</h2>
@@ -40,13 +40,15 @@
               [rows]="7"
             ></textarea>
             <mat-error
-              *ngIf="sentences.invalid && (sentences.dirty || sentences.touched)"
+              *ngIf="
+                sentences.invalid && (sentences.dirty || sentences.touched)
+              "
             >
               {{ sentences.errors ? "Sentences are required" : "" }}
             </mat-error>
           </mat-form-field>
         </div>
-  
+
         <div class="form-group">
           <mat-form-field>
             <label for="pictures">Picture Selection Time (seconds)</label>
@@ -69,7 +71,7 @@
             </mat-error>
           </mat-form-field>
         </div>
-  
+
         <div class="form-group">
           <mat-form-field>
             <label for="voteTime">Vote Time (seconds)</label>
@@ -89,7 +91,7 @@
             </mat-error>
           </mat-form-field>
         </div>
-  
+
         <div class="form-group">
           <mat-form-field>
             <label for="numOfVotesToWin">Number of Votes to Win</label>
@@ -112,7 +114,7 @@
             </mat-error>
           </mat-form-field>
         </div>
-  
+
         <div class="form-group">
           <mat-form-field>
             <label for="numOfRounds">Max Number of Rounds</label>
@@ -123,11 +125,11 @@
               name="numOfRounds"
               #numOfRounds="ngModel"
               ngModel
-              [(ngModel)]="matchSettings.numOfRounds"
             />
             <mat-error
               *ngIf="
-                numOfRounds.invalid && (numOfRounds.dirty || numOfRounds.touched)
+                numOfRounds.invalid &&
+                (numOfRounds.dirty || numOfRounds.touched)
               "
             >
               {{ numOfRounds.errors ? "Number of Rounds to Win error" : "" }}
@@ -142,5 +144,5 @@
         Start
       </button>
     </div>
-</div>
+  </div>
 </mat-card>
