--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.css
@@ -9,8 +9,12 @@
   box-sizing: border-box;
 }
 
-.voted {
+.voted-picture {
   border: 2px solid rgb(255, 8, 0);
+}
+
+.winning-picture {
+  border: 3px solid rgb(255, 251, 0);
 }
 
 .disabled {
