Fix leaving a match in proggress wil call the leave match API

--- a/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
@@ -6,7 +6,7 @@
   <app-pre-match-lobby
     *ngSwitchCase="MatchStates.notStarted"
     [matchId]="matchId!"
-    (onDisconnect)="leaveMatch()"
+    (onLeaveMatch)="leaveMatch()"
     (onMatchStart)="redirectToMatch()"
   ></app-pre-match-lobby>
   <app-in-match
