--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
@@ -140,9 +140,9 @@
           {{ errorMessage }}
         </mat-error>
       </form>
-      <button color="primary" mat-raised-button (click)="startMatch()">
+      <app-button-single-use (click)="startMatch()">
         Start
-      </button>
+      </app-button-single-use>
     </div>
   </div>
 </mat-card>
