Fix button-single-use double emit on click

--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
@@ -3,10 +3,12 @@
   <span>
     <app-button-single-use
       class="create-match-button"
-      (click)="createMatch()"
+      (buttonClick)="createMatch()"
+      
     >
       Create a match
     </app-button-single-use>
+
     <button
       class="refresh-list"
       color="primary"
