--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
@@ -140,7 +140,7 @@
           {{ errorMessage }}
         </mat-error>
       </form>
-      <app-button-single-use (click)="startMatch()">
+      <app-button-single-use (buttonClick)="startMatch()">
         Start
       </app-button-single-use>
     </div>
