Client handles appending picturePath with API Path

--- a/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.html
@@ -1,3 +1,4 @@
 <div class="image-container">
   <img [src]="picture.picturePath" [alt]="picture.id" class="image" />
 </div>
+{{picture.picturePath}}{{picture.id}}
