Fix round crashes

--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -1,4 +1,4 @@
-<div class="in-match-container" [ngSwitch]="currentRound?.roundState">
+<div class="in-match-container">
   <h2>
     Sentence:<strong> {{ this.currentRound?.sentence }}</strong>
   </h2>
@@ -12,7 +12,9 @@
       Round Time: <strong>{{ this.countdown$ | async }}</strong>
     </p>
     <p *ngIf="currentRound?.roundState === RoundStates.ended">
-      <strong>Winner: {{ currentRound!.roundWinner!.username }}</strong>
+      <strong
+        >Winner: {{ currentRound!.roundWinner?.username ?? "Draw" }}</strong
+      >
     </p>
     <button
       mat-raised-button
@@ -25,13 +27,16 @@
   </mat-card>
 
   <app-in-match-picture-selection
-    *ngSwitchCase="RoundStates.pictureSelection"
+    *ngIf="currentRound?.roundState === RoundStates.pictureSelection"
     [pictures]="this.usersPictures"
     [currentRound]="this.currentRound"
   ></app-in-match-picture-selection>
 
   <app-in-match-vote-picture
-    *ngSwitchCase="RoundStates.voting || RoundStates.ended"
+    *ngIf="
+      currentRound?.roundState === RoundStates.voting ||
+      currentRound?.roundState === RoundStates.ended
+    "
     [picturesToVote]="this.currentRound!.picturesSelected"
     [userPictureIds]="this.userPictureIds"
     [currentRound]="this.currentRound!"
