Fix canceling a image upload still uploads it

--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
@@ -29,7 +29,7 @@
       <button
         mat-raised-button
         color="warn"
-        (onClick)="this.pictureFileToUpload = undefined"
+        (click)="cancelUpload()"
         [hidden]="this.pictureFileToUpload == undefined"
       >
         Cancel
