--- a/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.css
+++ b/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.css
@@ -11,6 +11,8 @@ mat-card{
   width: fit-content;
   margin-top: 10%;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .registration-title {
