--- a/photo-showdown-frontend/src/app/homepage/homepage/homepage.component.html
+++ b/photo-showdown-frontend/src/app/homepage/homepage/homepage.component.html
@@ -1,1 +1,20 @@
-<p>homepage works!</p>
+<div class="homepage">
+  <h1>Welcome to our App</h1>
+  <p>This is a description of our app and what it does.</p>
+  <p>Here are some key features:</p>
+  <ul>
+    <li>Feature 1</li>
+    <li>Feature 2</li>
+    <li>Feature 3</li>
+  </ul>
+  <h2>About the Game</h2>
+  <p>This is a description of the game and how it works.</p>
+  <p>Here are some details about the game:</p>
+  <ul>
+    <li>Detail 1</li>
+    <li>Detail 2</li>
+    <li>Donfil 3</li>
+    <li>Detail 4</li>
+    <li>Halmush</li>
+  </ul>
+</div>
