--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
@@ -1,6 +1,7 @@
-.create-match-button {
-  margin-bottom: 10px;
-  margin-right: 10px;
+
+.matches-container {
+  margin: 2% auto;
+  width: 70vw;
 }
 
 .title {
@@ -9,13 +10,4 @@
   text-align: center;
   font-size: x-large;
   margin-bottom: 17px;
-}
-
-.matches-container {
-  margin: 2% auto;
-  width: 70vh;
-}
-
-.refresh-list {
-  margin-bottom: 10px;
 }
