--- a/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.css
+++ b/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.css
@@ -3,6 +3,8 @@ form {
   max-width: 250px;
   width: 100%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 mat-card {
@@ -20,3 +22,15 @@ mat-card {
 .registration-title h2 {
   margin: 0;
 }
+
+p{
+  margin: 0;
+  margin-top: 10px;
+  text-align: center;
+}
+
+button {
+  margin-top: 20px;
+  width: 100%;
+}
+
