redesign in match

--- a/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
@@ -8,8 +8,8 @@
 
   <button
     class="enter-match-button"
-    color="primary"
-    mat-icon-button
+    color="secondary"
+    mat-fab
     (click)="joinMatch()"
   >
     <mat-icon>group_add</mat-icon>
