--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.css
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 16px;
   overflow-y: scroll;
+  height: 59vh; /* Stretched to the bottom of the screen */
 }
 
 .grid-item {
