--- a/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
@@ -9,7 +9,7 @@
   <app-pre-match-lobby
     *ngSwitchCase="MatchStates.notStarted"
     [matchId]="matchId!"
-    (onLeaveMatch)="leaveMatch()"
+    (onLeaveMatch)="redirectToMatchList()"
     (onMatchStart)="redirectToMatch()"
   ></app-pre-match-lobby>
   
@@ -17,6 +17,6 @@
   <app-in-match
     *ngSwitchCase="MatchStates.inProgress"
     [matchId]="matchId!"
-    (onLeaveMatch)="leaveMatch()"
+    (onLeaveMatch)="redirectToMatchList()"
   ></app-in-match>
 </div>
