--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -20,7 +20,7 @@
       mat-raised-button
       color="warn"
       [disabled]="!this.currentRound?.picturesSelected"
-      (click)="onLeaveMatchClicked()"
+      (click)="leaveMatch()"
     >
       Disconnect
     </button>
