--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
@@ -3,7 +3,7 @@
     *ngFor="let picture of pictures"
     [picture]="picture"
     class="grid-item"
-    (click)="onPictureSelected(picture)"
+    (click)="selectPicture(picture)"
     [class.selected]="picture.id === selectedPictureId"
   ></app-picture-item>
 </div>
@@ -12,7 +12,7 @@ class="lock-in-button"
   mat-raised-button
   color="primary"
   [disabled]="!selectedPictureId || lockedIn"
-  (click)="onLockIn()"
+  (click)="lockIn()"
 >
   Lock-in Selection
 </button>
